# MPSEES-23-nxtOSEK-Driving

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md  calibrate_colors.cpp  main.cpp  pre-commit  test_pseudocode.ipynb
include/: globals.hpp
include/communication/internal/: BlackBoard.hpp  SmartMember.hpp
include/communication/serial/: ISerialRead.hpp  ISerialReadWrite.hpp  ISerialWrite.hpp
include/modules/color_sensor/: ColorTypes.hpp
include/modules/movement/: IMotor.hpp  IMovement.hpp  IOdometry.hpp
lane_detection/: CMakeLists.txt  main.cpp
lib/ORB_SLAM3/: .gitignore  CMakeLists.txt  README.md  build.sh
lib/ORB_SLAM3/include/: LoopClosing.h
lib/ORB_SLAM3/src/: System.cc
lib/remote_control/: DS4.cpp  DS4.hpp
lib/remote_control/utils/: Timer.cpp  Timer.hpp  Utilities.cpp  Utilities.hpp
libs/: CMakeToolChain.txt
main/: calibrate_colors.cpp  geordi.cpp  remote_controlled.cpp
src/: globals.hpp  main.cpp  mapping.cpp  mono_raspi_cam.yaml
src/blackboard/: BlackBoard.cpp  BlackBoard.hpp  SmartMember.hpp
src/buildhat++/: BuildHat.cpp  BuildHat.hpp  Drive.cpp  Drive.hpp  Motor.cpp  Motor.hpp
src/camera/: camera.cpp  camera.hpp
src/communication/internal/: BlackBoard.cpp
src/communication/serial/: BuildHat.cpp  BuildHat.hpp
src/lane_detection/: CMakeLists.txt  LaneDetection.cpp  LaneDetection.hpp  main.cpp  main.hpp
src/modules/color_sensor/: ColorSensor.cpp  ColorSensor.hpp  ColorTypes.cpp
src/modules/control/: PDController.cpp  PDController.hpp  RobotController.cpp  RobotController.hpp
src/modules/lane_detection/: LaneDetection.cpp  LaneDetection.hpp
src/modules/movement/: Drive.cpp  Drive.hpp  Motor.cpp  Motor.hpp
src/modules/slam/: coordinates.hpp  localization.cpp  localization.hpp  mapping.cpp  mapping.hpp  navigation.cpp  navigation.hpp
src/modules/webserver/: webserver.cpp  webserver.hpp
src/slam/: coordinates.cpp  coordinates.hpp  localization.cpp  localization.hpp  mapping.cpp  mapping.hpp  navigation.cpp
test/: CMakeLists.txt  helper.cpp  helper.hpp  localization_ci_test.cpp  localization_test.cpp  testTrajectory.txt  test_mapping.cpp
test/ci_tests/: example_test.cpp  localization_ci_test.cpp
test/manual_tests/: controller_test.cpp  drive_test.cpp
test/python/: coordinates.txt  plot_coordinates.py  test_1_pseudocode.ipynb  test_2_show_trajectory.ipynb  test_3_generate_test_trajectory.ipynb
test/python/test_Trajectory_ORB/: KeyFrameTrajectory0.txt  KeyFrameTrajectory1.txt  KeyFrameTrajectory2.txt  KeyFrameTrajectory3.txt  KeyFrameTrajectory4.txt  KeyFrameTrajectory5.txt  KeyFrameTrajectory6.txt  KeyFrameTrajectory7.txt
